fix(<dashboard>): fix icon alignment in <md-list>

--- a/app/components/dashboard/dashboard.css
+++ b/app/components/dashboard/dashboard.css
@@ -24,3 +24,7 @@
 .dashboard md-list-item {
 	cursor: pointer;
 }
+
+.dashboard md-list-item i {
+	line-height: 40px;
+}
